Header CSS Part 1

--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="style.css">
+
     <title>YouTube Clone</title>
 </head>
 
@@ -20,7 +23,7 @@
                     <div class="style-scope ytd-topbar-logo-renderer">
                         <yt-icon id="logo-icon" class="style-scope ytd-topbar-logo-renderer"><svg viewBox="0 0 90 20"
                                 preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope yt-icon"
-                                style="pointer-events: none; display: block; width: 100%; height: 100%;">
+                                style="pointer-events: none; display: block; width: 70%; height: 100%;">
                                 <g viewBox="0 0 90 20" preserveAspectRatio="xMidYMid meet" class="style-scope yt-icon">
                                     <g class="style-scope yt-icon">
                                         <path
@@ -78,7 +81,7 @@
             <img src="assets/video_call_black_24dp.svg" alt="Create"/>
             <img src="assets/apps_black_24dp.svg" alt="YouTube apps"/>
             <img src="assets/notifications_black_24dp.svg" alt="Notifications"/>
-            <img src="assets/profilepic.jpg" alt="Google account profile pic"/>
+            <img src="assets/profilepic.jpg" alt="Google account profile pic" id="profilepic"/>
         </div>
     </header>
     <main>
