Embed video + code description area

--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 
     <title>YouTube Clone</title>
@@ -35,17 +40,28 @@
     </div>
   </header>
 
+    <div class="main-container">
     <main>
-        <div class="actual-video"></div>
-        <div class="title-container"></div>
+        <div class="actual-video">
+            <iframe width="640" height="360" src="https://www.youtube-nocookie.com/embed/keMXsgSQyL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="title-container">
+            <div class="title-details">
+                <div class="location-icon"><img src="assets/location_on_white_24dp.svg" alt="Location Icon" style=" rgb(68, 108, 238);"/></div>
+                <div class="actual-location">Milan, Italy</div>
+            </div>
+            <h2 class="actual-title">Microverse Success Story: Valentino Valenti</h2>
+        </div>
         <div class="metrics"> </div>
         <div class="channel-details"></div>
         <div class="comments-section"></div>
     </main>
     <aside>
+        <h4>Aside</h4>
         <div class="video-recommendation-filters"></div>
         <div class="all-video-recommendation"></div>
     </aside>
+</div>
 </body>
 
 </html>
